# learnopengl

./: .gitignore  CMakeLists.txt  README.md
includes/glad/: glad.h
src/: glad.c  main.cpp
src/camera/: camera.cpp  camera.h
src/light/: directionallight.cpp  directionallight.h  flashlight.cpp  flashlight.h  light.cpp  light.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
src/material/: material.cpp  material.h  texture.cpp  texture.h
src/model/: Scene.cpp  Scene.h  model.cpp  model.h  rawmodel.h
src/renderengine/: DisplayManager.cpp  DisplayManager.h  displaymanager.cpp  displaymanager.h  gbuffer.cpp  gbuffer.h  loader.cpp  loader.h  rawmodel.cpp  rawmodel.h  render.cpp  render.h  shader.cpp  shader.h
src/scene/: mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  skybox.cpp  skybox.h
src/shaders/: depthFrag.shader  fragment.shader  lightVertex.shader  outlineFrag.shader  shader.fs  shader.vs  temp.shader  vertex.shader
src/shaders/basic/: fragment.shader  vertex.shader
src/shaders/blur/: blurFrag.shader
src/shaders/deferred/: hdrFrag.shader  hdrVertex.shader
src/shaders/gbuffer/: gbufferFrag.shader  lightpassFrag.shader
src/shaders/hdr/: hdrFrag.shader  hdrVertex.shader
src/shaders/normal/: normalGeometry.shader  normalVertex.shader
src/shaders/shadow/: debugDepthFrag.shader  debugDepthVertex.shader  directionLightVertex.shader  pointLightFrag.shader  pointLightGeo.shader  pointLightVertex.shader
src/shaders/simplest/: simpleFrag.shader  simpleVertex.shader
src/shaders/skybox/: skyboxFrag.shader  skyboxVertex.shader
src/transformation/: rotate.cpp  rotate.h  transformation.cpp  transformation.h
src/utils/: fileutils.cpp  fileutils.h
